add the other entities in the schema, add script in package.json for migration

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "migrate:dev": "npx prisma migrate dev --preview-feature"
+  },
   "dependencies": {
     "prisma": "^2.18.0",
     "typescript": "^4.2.3"
