--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,14 +1,28 @@
 version: '3'
 services:
   database:
-    image: 'postgres'
-    container_name: 'squad_up_db'
+    image: 'library/postgres:12-alpine'
+    container_name: 'squad-up-db'
     ports:
       - 5432:5432
     env_file:
       - database.env
     volumes:
       - squadup-data:/var/lib/postgresql/data/
+  api:
+    container_name: squad-up-api
+    restart: always
+    image: node:alpine
+    build:
+      context: .
+    env_file:
+      - ./.env
+    depends_on:
+      - database
+    ports:
+      - 8080:8080
+    networks:
+      - default
 
 volumes:
   squadup-data:
