--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,25 @@
 {
+  "name": "squad-up",
+  "version": "0.0.1",
+  "description": "Backend for Squad Up: an MCP Roster Builder",
+  "author": "Brendan Desjarlais",
   "scripts": {
+    "start": "tsc && node build/server.js",
     "migrate:dev": "npx prisma migrate dev --preview-feature"
   },
   "dependencies": {
-    "prisma": "^2.18.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "postgraphile": "^4.11.0",
+    "postgraphile-plugin-connection-filter": "^2.1.1",
+    "prisma": "^2.18.0"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.34",
     "typescript": "^4.2.3"
   }
 }
