finish up setup of the api

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "pg": "^8.5.1",
     "postgraphile": "^4.11.0",
     "postgraphile-plugin-connection-filter": "^2.1.1",
+    "postgraphile-plugin-nested-mutations": "^1.0.1",
     "prisma": "^2.18.0"
   },
   "devDependencies": {
