--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  equatable: ^1.0.0
   flutter_bloc:  ^7.0.0-nullsafety.6
   flutter:
     sdk: flutter
