--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,28 +23,29 @@ environment:
 dependencies:
   equatable: ^1.0.0
   flutter_bloc:  ^7.0.0-nullsafety.6
+  get_it: ^5.0.0
+  hive: ^2.0.0
+  hive_flutter: ^1.0.0
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
 
 dev_dependencies:
+  hive_generator: ^1.0.0
+  build_runner: ^1.12.2
   graphql_to_dart: 1.0.0
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter.
+dependency_overrides:
+  build: ">=2.0.0 <2.1.0"
+  convert: ^3.0.0
+  crypto: ^3.0.0
+  yaml: ^3.0.0
+
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
