--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  equatable: ^1.0.0
+  equatable: ^2.0.0
   flutter_bloc:  ^7.0.0-nullsafety.6
-  get_it: ^5.0.0
+  get_it: ^6.0.0
   hive: ^2.0.0
   hive_flutter: ^1.0.0
   uuid: 3.0.2
@@ -34,8 +34,8 @@ dependencies:
 
 dev_dependencies:
   hive_generator: ^1.0.0
-  build_runner: ^1.12.2
-  graphql_to_dart: 1.0.0
+  build_runner:
+  graphql_to_dart: ^1.0.1
   flutter_test:
     sdk: flutter
 
