--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   equatable: ^2.0.0
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.1
+  collection: ^1.15.0-nullsafety.4
 
 dev_dependencies:
   hive_generator: ^1.0.0
